Fine works details in audit grid, todo: fully i18n